完善图标显示，暂时开始新项目

--- a/index.html
+++ b/index.html
@@ -120,21 +120,19 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-6 row-border div-col">
-				<a href="#" class="a-img">
-					<figure style="padding-top: 25%;">
+				<a href="#" class="a-img text-center">
+					<div style="padding-top: 40%;">
 						<span class="badge a-span-badge">50</span>
-						<img src="img/icon/png/56323.png" class="center-block" width="70" height="70"/>
-						<figcaption class="text-center">
-							<h5><strong>上座情况</strong></h5>
-						</figcaption>
-					</figure>
+						<div class="glyphicon glyphicon-th center-block" style="font-size: 60px;color: #999999;text-shadow: black 5px 3px 3px;"></div>
+						<h5><strong>上座情况</strong></h5>
+					</div>
 				</a>
 			</div>
 			<div class="col-xs-6 row-border div-col">
 				<a href="#" class="a-img text-center">
 					<div style="padding-top: 40%;">
 						<span class="badge a-span-badge">50</span>
-						<div class="glyphicon glyphicon-save center-block" style="font-size: 60px;color: #999999;text-shadow: black 5px 3px 3px;"></div>
+						<div class="glyphicon glyphicon-phone-alt center-block" style="font-size: 60px;color: #999999;text-shadow: black 5px 3px 3px;"></div>
 						<h5><strong>玩家留言</strong></h5>
 					</div>
 				</a>
@@ -142,25 +140,21 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-6 row-border div-col">
-				<a href="#" class="a-img">
-					<figure style="padding-top: 25%;">
+				<a href="#" class="a-img text-center">
+					<div style="padding-top: 40%;">
 						<span class="badge a-span-badge">50</span>
-						<img src="img/icon/png/59323.png" class="center-block" width="70" height="70"/>
-						<figcaption class="text-center">
-							<h5><strong>游戏下载</strong></h5>
-						</figcaption>
-					</figure>
+						<div class="glyphicon glyphicon-save center-block" style="font-size: 60px;color: #999999;text-shadow: black 5px 3px 3px;"></div>
+						<h5><strong>游戏下载</strong></h5>
+					</div>
 				</a>
 			</div>
 			<div class="col-xs-6 row-border div-col">
-				<a href="#" class="a-img">
-					<figure style="padding-top: 25%;">
+				<a href="#" class="a-img text-center">
+					<div style="padding-top: 40%;">
 						<span class="badge a-span-badge">50</span>
-						<img src="img/icon/png/60323.png" class="center-block" width="70" height="70"/>
-						<figcaption class="text-center">
-							<h5><strong>重要通知</strong></h5>
-						</figcaption>
-					</figure>
+						<div class="glyphicon glyphicon-comment center-block" style="font-size: 60px;color: #999999;text-shadow: black 5px 3px 3px;"></div>
+						<h5><strong>重要通知</strong></h5>
+					</div>
 				</a>
 			</div>
 		</div>
