--- a/apps/message.html
+++ b/apps/message.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="../sea-modules/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="../static/css/global.css" />
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="../sea-modules/bootstrap/bootstrap.min.css" />
+  <link rel="stylesheet" href="../static/css/global.css" />
 </head>
+
 <body class="bg-e">
-<div class="name-title"><span>龙腾网吧</span><a href="" class="pull-right"><img src="../static/images/u2708.png" /> 设置</a></div>
-<div class="margin-t-3" id="">
+  <div class="name-title"><span>龙腾网吧</span>
+    <a href="" class="pull-right"><img src="../static/images/u2708.png" /> 设置</a>
+  </div>
+  <div class="margin-t-3" id="">
     <div class="content-block content-block-m">
-        <h3 class="">辖区网吧下周安装净网先锋</h3>
-        <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-        <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
-    </div>
-    <div class="content-block content-block-m">
-        <h3 class="">辖区网吧下周安装净网先锋</h3>
-        <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-        <div class="ad-Reply"><span>管理员回复：</span>分手的距离看风景独守空房惊世毒妃第十六届</div>
-        <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
+      <h3 class="">辖区网吧下周安装净网先锋</h3>
+      <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
+      <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
     </div>
     <div class="content-block content-block-m">
-        <h3 class="">辖区网吧下周安装净网先锋</h3>
-        <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-        <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
+      <h3 class="">辖区网吧下周安装净网先锋</h3>
+      <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
+      <div class="ad-Reply"><span>管理员回复：</span>分手的距离看风景独守空房惊世毒妃第十六届</div>
+      <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
     </div>
-</div>
-
-
-
-
-<div class="bottom-fxied">
-    <div>
-        <a href="">
-            <img src="../static/images/u2466.png" />
-            <p>上座率</p>
-        </a>
+    <div class="content-block content-block-m">
+      <h3 class="">辖区网吧下周安装净网先锋</h3>
+      <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
+      <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
     </div>
+  </div>
+  <div class="bottom-fxied">
     <div>
-        <a href="">
-            <img src="../static/images/u2464.png" />
-            <p class="c-4">留言板</p>
-        </a>
+      <a href="javascript:void(0);" class="attendance_bbtn">
+        <img src="../static/images/u2466.png" />
+        <p>上座率</p>
+      </a>
     </div>
     <div>
-        <a href="">
-            <img src="../static/images/u2416.png" />
-            <p>下游戏</p>
-        </a>
+      <a href="javascript:void(0);" class="message_bbtn">
+        <img src="../static/images/u2464.png" />
+        <p class="c-4">留言板</p>
+      </a>
     </div>
     <div>
-        <a href="">
-            <img src="../static/images/u2410.png" />
-            <p>看通知</p>
-        </a>
+      <a href="javascript:void(0);" class="download_bbtn">
+        <img src="../static/images/u2416.png" />
+        <p>下游戏</p>
+      </a>
     </div>
-</div>
-
+    <div>
+      <a href="javascript:void(0);" class="notice_bbtn">
+        <img src="../static/images/u2410.png" />
+        <p>看通知</p>
+      </a>
+    </div>
+  </div>
 </body>
+<script type="text/javascript" src="../sea-modules/jquery/jquery-3.1.1.js"></script>
+<script type="text/javascript" src="../sea-modules/seajs/sea.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+  seajs.use('../static/message/src/main');
+});
+</script>
+
 </html>
