--- a/apps/content.html
+++ b/apps/content.html
@@ -11,6 +11,21 @@
   <title>方格子</title>
   <link rel="stylesheet" href="../sea-modules/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="../static/css/global.css" />
+  <style type="text/css">
+  .grayscale {
+    /**  格式，filer: grayscale(效果范围)
+     *  效果范围，取值范围为0-1或0-100%；0表示无效果，1或100%表示最大效果
+     */
+    -webkit-filter: grayscale(100%) opacity(40%);
+    -o-filter: grayscale(100%) opacity(40%);
+    -moz-filter: grayscale(100%) opacity(40%);
+    -ms-filter: grayscale(100%) opacity(40%);
+    filter: grayscale(100%) opacity(40%);
+  }
+  .bottom-fxied a:hover, a:focus {
+    text-decoration: none;
+  }
+  </style>
 </head>
 
 <body>
