--- a/apps/content.html
+++ b/apps/content.html
@@ -22,7 +22,7 @@
     -ms-filter: grayscale(100%) opacity(40%);
     filter: grayscale(100%) opacity(40%);
   }
-  .bottom-fxied a:hover, a:focus {
+  .bottom-fxied a, a:hover, a:focus {
     text-decoration: none;
   }
   </style>
