#留言板数据动态展示

--- a/apps/content.html
+++ b/apps/content.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="../sea-modules/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="../static/css/global.css" />
   <style type="text/css">
+  body {
+    background-color: #E4E4E4;
+  }
   .grayscale {
     /**  格式，filer: grayscale(效果范围)
      *  效果范围，取值范围为0-1或0-100%；0表示无效果，1或100%表示最大效果
