--- a/apps/message.html
+++ b/apps/message.html
@@ -1,23 +1,13 @@
-<div class="name-title"><span>龙腾网吧</span>
+<style type="text/css">
+  .content-bottom span a {
+    color: #4E90FF;
+  }
+</style>
+<div class="name-title">
+  <span></span>
   <a href="javascript:void(0)" class="pull-right msg_setting"><img src="../static/images/u2708.png" /> 设置</a>
 </div>
-<div class="margin-t-3" id="">
-  <div class="content-block content-block-m">
-    <h3 class="">辖区网吧下周安装净网先锋</h3>
-    <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-    <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
-  </div>
-  <div class="content-block content-block-m">
-    <h3 class="">辖区网吧下周安装净网先锋</h3>
-    <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-    <div class="ad-Reply"><span>管理员回复：</span>分手的距离看风景独守空房惊世毒妃第十六届</div>
-    <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
-  </div>
-  <div class="content-block content-block-m">
-    <h3 class="">辖区网吧下周安装净网先锋</h3>
-    <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-    <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">删除</span><span class="pull-right">回复</span></div>
-  </div>
+<div class="margin-t-3 msg_content">
 </div>
 <script type="text/javascript">
 $(document).ready(function() {
