#整体样式调整

--- a/apps/download.html
+++ b/apps/download.html
@@ -1,30 +1,40 @@
-<div class="title-name">游戏下载</div>
-<div class="margin-l-1 search-input"><input id="" /><button>查询游戏</button></div>
+<link rel="stylesheet" type="text/css" href="../static/download/style.css">
+<div class="name-title">
+  <span></span> | 游戏下载
+</div>
+<div class="margin-t-4 search-input">
+  <input id="" />
+  <button>查询游戏</button>
+</div>
 <div id="" class="margin-l-1">
-    <p class="search-hint">找到5个游戏</p>
-    <div class="search-result"><p>英雄联盟百宝箱英雄联盟百宝箱英雄联盟百宝箱</p> <a href="">下载</a></div>
-    <div class="search-result"><p>英雄联盟百宝箱</p> <a href="">下载</a></div>
-    <div class="search-result"><p>英雄联盟百宝箱</p> <a href="">下载</a></div>
-    <div class="search-result"><p>英雄联盟百宝箱</p> <a href="">下载</a></div>
+  <p class="search-hint">找到5个游戏</p>
+  <div class="search-result">
+    <p>英雄联盟百宝箱英雄联盟百宝箱英雄联盟百宝箱</p> <a href="">下载</a></div>
+  <div class="search-result">
+    <p>英雄联盟百宝箱</p> <a href="">下载</a></div>
+  <div class="search-result">
+    <p>英雄联盟百宝箱</p> <a href="">下载</a></div>
+  <div class="search-result">
+    <p>英雄联盟百宝箱</p> <a href="">下载</a></div>
 </div>
 <div class="title-name">本网吧游戏排行</div>
 <div class="margin-l-1 game-ranking">
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
-    <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
+  <p>TOP1：英雄联盟</p>
 </div>
 <script type="text/javascript">
-    $(document).ready(function() {
-        seajs.use('../static/download/src/main');
-    })
+$(document).ready(function() {
+  seajs.use('../static/download/src/main');
+})
 </script>
