--- a/apps/message.html
+++ b/apps/message.html
@@ -4,7 +4,7 @@
   }
 </style>
 <div class="name-title">
-  <span></span>
+  <span></span> | 留言板
   <a href="javascript:void(0)" class="pull-right msg_setting"><img src="../static/images/u2708.png" /> 设置</a>
 </div>
 <div class="margin-t-3 msg_content">
