--- a/apps/notice.html
+++ b/apps/notice.html
@@ -1,29 +1,7 @@
-<div id="">
-  <div class="content-block">
-    <h3 class="">辖区网吧下周安装净网先锋</h3>
-    <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-    <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">未读</span></div>
-  </div>
-  <div class="content-block c-b">
-    <h3 class="">辖区网吧下周安装净网先锋</h3>
-    <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-    <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">已读</span></div>
-  </div>
-  <div class="content-block">
-    <h3 class="">辖区网吧下周安装净网先锋</h3>
-    <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-    <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">未读</span></div>
-  </div>
-  <div class="content-block c-b">
-    <h3 class="">辖区网吧下周安装净网先锋</h3>
-    <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-    <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">已读</span></div>
-  </div>
-  <div class="content-block c-b">
-    <h3 class="">辖区网吧下周安装净网先锋</h3>
-    <p class="">网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的请退出营销大师后重新登录就好了网吧英雄网吧英雄联盟加载报错的，请退出营销大师后重新登录就好了</p>
-    <div class="content-bottom"><span>2016-12-09 16:32</span><span class="pull-right">已读</span></div>
-  </div>
+<div class="name-title">
+  <span></span> | 通知中心
+</div>
+<div class="margin-t-3 notice_content">
 </div>
 <script type="text/javascript">
 $(document).ready(function() {
