--- a/apps/attendance.html
+++ b/apps/attendance.html
@@ -1,4 +1,8 @@
 <link rel="stylesheet" type="text/css" href="../static/attendance/style.css">
+<div class="name-title">
+  <span></span> | 网吧概况
+</div>
+<div class="margin-t-4">
 <div class="top_div">
   <p class="prompt">网吧上座情况</p>
   <p class="prompt">机器总数：<span class="total_machine"></span>台</p>
@@ -20,6 +24,7 @@
     </tbody>
   </table>
 </div>
+  </div>
 <script type="text/javascript">
 $(document).ready(function() {
   seajs.use("../static/attendance/src/main")
