--- a/apps/content.html
+++ b/apps/content.html
@@ -8,7 +8,7 @@
   <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
   <meta name="description" content="">
   <meta name="author" content="xsiry">
-  <title>方格子</title>
+  <title>微信</title>
   <link rel="stylesheet" href="../sea-modules/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="../static/css/global.css" />
   <style type="text/css">
