--- a/apps/download.html
+++ b/apps/download.html
@@ -2,36 +2,43 @@
 <div class="name-title">
   <span></span> | 游戏下载
 </div>
-<div class="margin-t-4 search-input">
-  <input id="" />
-  <button>查询游戏</button>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="margin-t-4 search-input">
+      <input class="form-control pull-left" type="text" style="margin-left:20px;margin-top: -2px;margin-right: 10px;" />
+      <a href="javascript:void(0)" class="btn btn-success btn-sm pull-left search_btn">查询游戏</a>
+    </div>
+  </div>
 </div>
-<div id="" class="margin-l-1">
-  <p class="search-hint">找到5个游戏</p>
-  <div class="search-result">
-    <p>英雄联盟百宝箱英雄联盟百宝箱英雄联盟百宝箱</p> <a href="">下载</a></div>
-  <div class="search-result">
-    <p>英雄联盟百宝箱</p> <a href="">下载</a></div>
-  <div class="search-result">
-    <p>英雄联盟百宝箱</p> <a href="">下载</a></div>
-  <div class="search-result">
-    <p>英雄联盟百宝箱</p> <a href="">下载</a></div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="search_games" style="margin-top:20px;display: none;">
+      <table class="table">
+        <caption>共找到<span>5</span>个游戏:</caption>
+        <tbody>
+          <tr style="display:none;"></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
-<div class="title-name">本网吧游戏排行</div>
-<div class="margin-l-1 game-ranking">
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
-  <p>TOP1：英雄联盟</p>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="top_games center-block" style="margin-top:20px;">
+      <table class="table">
+        <caption class="opacity(50%)">本网吧游戏排行前十:</caption>
+        <thead>
+          <tr>
+            <th class="text-center">名次</th>
+            <th class="text-center">游戏</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="display:none;"></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 <script type="text/javascript">
 $(document).ready(function() {
