--- a/apps/download.html
+++ b/apps/download.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="margin-t-4 search-input">
-      <input class="form-control pull-left" type="text" style="margin-left:20px;margin-top: -2px;margin-right: 10px;" />
+      <input class="form-control pull-left search_name" type="text" style="margin-left:20px;margin-top: -2px;margin-right: 10px;" />
       <a href="javascript:void(0)" class="btn btn-success btn-sm pull-left search_btn">查询游戏</a>
     </div>
   </div>
@@ -30,7 +30,7 @@
         <thead>
           <tr>
             <th class="text-center">名次</th>
-            <th class="text-center">游戏</th>
+            <th class="text-right">游戏</th>
           </tr>
         </thead>
         <tbody>
