--- a/login.html
+++ b/login.html
@@ -34,11 +34,11 @@
       <form class="form-signin" id="loginFrom">
         <!-- 方便展示，暂时使用get -->
         <div class="form-group has-feedback">
-          <input type="text" id="inputUsername" name='inputUsername' class="form-control input-opacity" placeholder="网吧账号" required autofocus>
+          <input type="text" id="inputUsername" name='username' class="form-control input-opacity" placeholder="网吧账号" required autofocus>
           <span class="glyphicon glyphicon-user form-control-feedback icon" aria-hidden="true"></span>
         </div>
         <div class="form-group has-feedback">
-          <input type="password" id="inputPassword" name='inputPassword' class="form-control input-opacity" placeholder="密码" required>
+          <input type="password" id="inputPassword" name='password' class="form-control input-opacity" placeholder="密码" required>
           <span class="glyphicon glyphicon-lock form-control-feedback icon" aria-hidden="true"></span>
         </div>
         <div class="checkbox">
@@ -51,7 +51,8 @@
             <span><strong style="font-family: '微软雅黑';">记住密码</strong></span>
           </label>
         </div>
-        <button class="btn btn-block subimt_btn" type="submit">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
+        <a class="btn btn-block subimt_btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</a>
+        <div class="login_msg text-center center-block"></div>
       </form>
     </div>
     <!-- /container -->
