#游戏下载 增加后台查询 下载功能

--- a/apps/download.html
+++ b/apps/download.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="../static/download/style.css">
+<div style="overflow-y:hidden">
 <div class="name-title">
   <span></span> | 游戏下载
 </div>
@@ -11,10 +12,10 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-    <div class="search_games" style="margin-top:20px;display: none;">
+  <div class="col-xs-12 search_games_content">
+    <div class="search_games">
       <table class="table">
-        <caption>共找到<span>5</span>个游戏:</caption>
+        <caption>共找到<span>0</span>个游戏:</caption>
         <tbody>
           <tr style="display:none;"></tr>
         </tbody>
@@ -39,6 +40,7 @@
       </table>
     </div>
   </div>
+</div>
 </div>
 <script type="text/javascript">
 $(document).ready(function() {
