#公告列表 数据后台处理 页面增加详情查看 已查看的公告显示为灰色

--- a/apps/notice.html
+++ b/apps/notice.html
@@ -3,6 +3,8 @@
 </div>
 <div class="margin-t-3 notice_content">
 </div>
+<div class="margin-t-3 notice_detail" style="diplay:none;">
+</div>
 <script type="text/javascript">
 $(document).ready(function() {
   seajs.use('../static/notice/src/main');
