--- a/apps/message.html
+++ b/apps/message.html
@@ -2,6 +2,86 @@
   .content-bottom span a {
     color: #4E90FF;
   }
+  .msg_content {
+  	margin-bottom: 65px;
+  }
+  .reply_content {
+  	margin-bottom: 54px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: rgba(17, 17, 17, 0.90);
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
+    display: none;
+  }
+  .reply_msg{
+  	margin-left: 10px;
+  	width: 80%;
+    opacity:0.95;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  }
+  pre {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    white-space: pre-wrap;
+    word-break: normal;
+  }
+  .flex {
+  	background: #fff;
+  	border: none;
+    border-radius: 4px;
+    max-height: 112px;
+    min-height: 46px;
+    padding-left: 10px;
+    padding-right: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    outline: none;
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .reply_msg_btn button{
+  	margin-right: 10px;
+  }
+  .reply_title {
+  	margin-left: 10px;
+    margin-bottom: 3px;
+    background: rgba(17, 17, 17, 0);
+    margin-right: 10px;
+    font-size: 18px;
+    color: #fff;
+    width: 80%;
+    padding: 0px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  }
+  
+  .reply_commit_btn {
+  	position: fixed;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 60px;
+    margin-right: 10px;
+  }
+  .reply_cancel_btn {
+  	position: fixed;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 99px;
+    margin-right: 10px;
+  }
 </style>
 <div class="name-title">
   <span></span> | 留言板
@@ -9,6 +89,18 @@
 </div>
 <div class="margin-t-3 msg_content">
 </div>
+
+<div class="reply_content">
+	<div class="reply_title">回复：<span class="reply_number_msg"></span> 号机玩家 <span class="msgid_msg" style="display:none;"></span></div>
+	<div class="reply_msg pull-left">
+		<pre id="editArea" contenteditable-directive="" mm-paste="" contenteditable="true" class="flex"></pre> 
+	</div>
+	<div class="pull-right reply_msg_btn">
+	<button type="button" class="btn btn-info reply_cancel_btn">取消</button>
+	<button type="button" class="btn btn-success reply_commit_btn">回复</button>
+	</div>
+</div>
+
 <script type="text/javascript">
 $(document).ready(function() {
   seajs.use('../static/message/src/main');
